tests/rosetta/out/C/chaocipher.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:50Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:50Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    char *tmp1 = slice_string(s, i, i + 1);
    if ((strcmp(tmp1, ch) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

char *rotate(char *s, int n) {
  char *tmp2 = slice_string(s, n, s.len);
  char *tmp3 = slice_string(s, 0, n);
  char *tmp4 = concat_string(tmp2, tmp3);
  return tmp4;
}

char *scrambleLeft(char *s) {
  char *tmp5 = slice_string(s, 0, 1);
  char *tmp6 = slice_string(s, 2, 14);
  char *tmp7 = concat_string(tmp5, tmp6);
  char *tmp8 = slice_string(s, 1, 2);
  char *tmp9 = concat_string(tmp7, tmp8);
  char *tmp10 = slice_string(s, 14, s.len);
  char *tmp11 = concat_string(tmp9, tmp10);
  return tmp11;
}

char *scrambleRight(char *s) {
  char *tmp12 = slice_string(s, 1, 3);
  char *tmp13 = slice_string(s, 4, 15);
  char *tmp14 = concat_string(tmp12, tmp13);
  char *tmp15 = slice_string(s, 3, 4);
  char *tmp16 = concat_string(tmp14, tmp15);
  char *tmp17 = slice_string(s, 15, s.len);
  char *tmp18 = concat_string(tmp16, tmp17);
  char *tmp19 = slice_string(s, 0, 1);
  char *tmp20 = concat_string(tmp18, tmp19);
  return tmp20;
}

char *chao(char *text, int encode) {
  char *left = "HXUCZVAMDSLKPEFJRIGTWOBNYQ";
  char *right = "PTLNBQDEOYSFAVZKGJRIHWXUMC";
  char *out = "";
  int i = 0;
  while (i < strlen(text)) {
    char *tmp21 = slice_string(text, i, i + 1);
    char *ch = tmp21;
    int idx = 0;
    if (encode) {
      idx = index_of_string(right, ch);
      char *tmp22 = slice_string(left, idx, idx + 1);
      char *tmp23 = concat_string(out, tmp22);
      out = tmp23;
    } else {
      idx = index_of_string(left, ch);
      char *tmp24 = slice_string(right, idx, idx + 1);
      char *tmp25 = concat_string(out, tmp24);
      out = tmp25;
    }
    left = rotate(left, idx);
    right = rotate(right, idx);
    left = scrambleLeft(left);
    right = scrambleRight(right);
    i = i + 1;
  }
  return out;
}

int mochi_main() {
  char *plain = "WELLDONEISBETTERTHANWELLSAID";
  char *cipher = chao(plain, 1);
  printf("%s\n", plain);
  printf("%s\n", cipher);
  printf("%s\n", chao(cipher, 0));
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
